force-app/main/default/objects/ORDERTABLETEST2__x/ORDERTABLETEST2__x.object-meta.xml
<CustomObject>
    <description>ORDERTABLETEST2</description>
    <externalDataSource>testSnowflake</externalDataSource>
    <externalName>TESTDB.MYSCHEMA.ORDERTABLETEST2</externalName>
    <label>ORDERTABLETEST2</label>
    <pluralLabel>ORDERTABLETEST2</pluralLabel>
</CustomObject>