force-app/main/default/objects/ORDERTABLETEST2__x/fields/BUYERID__c.field-meta.xml
<CustomField>
    <fullName>BUYERID__c</fullName>
    <externalDeveloperName>BUYERID</externalDeveloperName>
    <label>BUYERID</label>
    <length>255</length>
    <referenceTo>BUYERORDER__x</referenceTo>
    <relationshipName>ORDERTABLETEST2</relationshipName>
    <type>ExternalLookup</type>
</CustomField>