force-app/main/default/objects/ORDERTABLETEST2__x/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <externalDeveloperName>CreatedDate__c</externalDeveloperName>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>