force-app/main/default/objects/ORDERTABLETEST2__x/fields/ITEMNAME__c.field-meta.xml
<CustomField>
    <fullName>ITEMNAME__c</fullName>
    <externalDeveloperName>ITEMNAME</externalDeveloperName>
    <label>ITEMNAME</label>
    <length>25</length>
    <type>Text</type>
</CustomField>