force-app/main/default/objects/ORDERTABLETEST2__x/fields/ITEMNUMBER__c.field-meta.xml
<CustomField>
    <fullName>ITEMNUMBER__c</fullName>
    <externalDeveloperName>ITEMNUMBER</externalDeveloperName>
    <label>ITEMNUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>