force-app/main/default/objects/ORDERTABLETEST2__x/fields/ORDERSTATUS__c.field-meta.xml
<CustomField>
    <fullName>ORDERSTATUS__c</fullName>
    <externalDeveloperName>ORDERSTATUS</externalDeveloperName>
    <label>ORDERSTATUS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>