force-app/main/default/objects/ORDERTABLETEST2__x/fields/PRICE__c.field-meta.xml
<CustomField>
    <fullName>PRICE__c</fullName>
    <externalDeveloperName>PRICE</externalDeveloperName>
    <label>PRICE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>