force-app/main/default/objects/ORDERTABLETEST2__x/fields/SEQUENCE__c.field-meta.xml
<CustomField>
    <fullName>SEQUENCE__c</fullName>
    <externalDeveloperName>SEQUENCE</externalDeveloperName>
    <label>SEQUENCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>